// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`List highlights no item when not focused 1`] = `
"
  alpha
  beta
  gamma
"
`;

exports[`List highlights the first item when focused, and all items fit the viewport 1`] = `
"
› alpha
  beta
  gamma
"
`;

exports[`List highlights the second item when focused, and all items fit the viewport 1`] = `
"
  alpha
› beta
  gamma
"
`;

exports[`List renders scroll indicators when items overflow the viewport 1`] = `
"↑ 4 more
  item-4
› item-5
  item-6
↓ 3 more"
`;

exports[`List renders the default fallback when none is provided and there are no items 1`] = `"  No items"`;

exports[`List renders the provided fallback when there are no items 1`] = `"  Custom fallback"`;
